gitops/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello
  namespace: luis-bruckner-dev
spec:
  to:
    kind: Service
    name: hello
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
